--- a/roles/golang/tasks/main.yml
+++ b/roles/golang/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
 - name: Download Go
   get_url:
-    checksum: sha256:d7d1f1f88ddfe55840712dc1747f37a790cbcaa448f6c9cf51bbe10aa65442f5
-    url: https://dl.google.com/go/go1.12.4.linux-amd64.tar.gz
-    dest: /tmp/go1.12.4.linux-amd64.tar.gz 
+    checksum: "{{ go_sha256sum }}"
+    url: "{{ go_base_url }}{{ go_version }}.{{ go_os }}-{{ go_arch }}.tar.gz"
+    dest: "/tmp/go{{ go_version }}.{{ go_os }}.{{ go_arch }}.tar.gz"
   
 - name: Extract Go
   become: yes
   unarchive:
     remote_src: yes
-    src: /tmp/go1.12.4.linux-amd64.tar.gz 
+    src: "/tmp/go{{ go_version }}.{{ go_os }}.{{ go_arch }}.tar.gz"
     dest: /usr/local/
 
 - name: Add Go to PATH system-wide
