--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [ssh_connection]
-ssh_args = -o ForwardAgent=yes
+ssh_args = -o ForwardAgent=yes -o ControlPersist=10m -o ControlMaster=auto
 pipelining = True
